# tk-data-preparer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  debug_behavior.py  detailed_structure.txt  dir.py  project_structure.txt  pyproject.toml  requirements.txt
examples/: advanced_pipeline_demo.ipynb  dados_processados.csv  demo_pipeline.ipynb
tests/: __init__.py  test_cleaning.py  test_deduplication.py  test_filtering.py  test_integration.py  test_logic.py  test_pipeline.py  test_state_service.py
tk_data_preparer/: __init__.py  __main__.py  app.py  logic.py  tooltip.py
tk_data_preparer/app/: __init__.py  main.py
tk_data_preparer/app/components/: __init__.py  column_editor.py  config_panel.py  file_loader.py  metrics_display.py  preview_panel.py
tk_data_preparer/app/services/: __init__.py  file_service.py  pipeline_service.py  state_service.py
tk_data_preparer/app/utils/: __init__.py  theme.py  tooltip.py  validators.py
tk_data_preparer/app/widgets/: __init__.py
tk_data_preparer/core/: __init__.py  cleaning.py  config.py  deduplication.py  filtering.py  pipeline.py
tk_data_preparer/utils/: __init__.py
