[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-data-preparer"
version = "0.1.0"
description = "Python Tkinter GUI tool to clean, preprocess, and export XLS/CSV/TXT data"
authors = [
    { name="Lucas Ferreira" }
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["data-cleaning", "tkinter", "excel", "csv", "txt", "pandas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Repository" = "https://github.com/lcspires/tk-data-preparer.git"

[tool.setuptools.packages.find]
where = ["tk-data-preparer"]
