[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-data-preparer"
version = "0.1.0"
description = "Python Tkinter GUI tool to clean, preprocess, and export XLS/CSV/TXT data"
authors = [
    { name="Lucas Ferreira" }
]
license = { text = "MIT" }  # Alterado de file para text para evitar warnings
readme = "README.md"
requires-python = ">=3.8"
keywords = ["data-cleaning", "tkinter", "excel", "csv", "txt", "pandas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
]

[project.urls]
"Repository" = "https://github.com/lcspires/tk-data-preparer.git"

[tool.setuptools.packages.find]
where = ["."]  # Corrigido: procurar na raiz
include = ["tk_data_preparer*"]  # Procurar pacotes que começam com tk_data_preparer
exclude = ["tests*", "examples*"]  # Excluir pastas de teste e exemplos

[tool.setuptools.package-data]
"*" = ["*.py", "*.txt", "*.md"]

# Configuração para pytest (opcional)
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"] 
python_functions = ["test_*"]